comments on discussion

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -673,6 +673,7 @@ Taken together, our results demonstrate the central role of context in plural pr
 
 
 \section{Modeling plural predication}
+\label{model}
 
 \ndg{this section should be much shorter -- probably about three pages. 
 %
@@ -865,15 +866,17 @@ In addition to the match between the qualitative predictions of our model and th
 
 \section{General discussion}
 
-We began with an age-old observation about collective interpretations for gradable predicates with plural subjects: some predicates admit collective interpretations, while others strongly (or totally) resist them. This phenomenon, dubbed ``stubborn distributivity'' after those predicates that ostensibly refuse collective interpretations, has been documented and described, even characterized in terms of semantic constraints. But an explanation of the phenomenon has proven elusive. Here, we offer an explanation: stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in context; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
-While this reasoning is enough to motivate our experiments, some confusion could remain about the exact nature and role of factors such as predictability. In section \ref{model} we formalized our hypothesis with a computational model that gives a precise role for factors including contextual noise and speaker knowledge; this pragmatic model indeed predicts the less-formally-motivated effects.
+We began with an old observation about collective interpretations for gradable predicates with plural subjects: some predicates admit collective interpretations, while others strongly (or totally) resist them. This phenomenon, dubbed ``stubborn distributivity'' after those predicates that ostensibly refuse collective interpretations, has been documented and described, even characterized in terms of semantic constraints. But an explanation of the phenomenon has proven elusive. Here, we offer an explanation: stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
+On this pragmatic account stubborn distributivity does not form a distinct category, rather there is a gradient of stubbornness. What's more, the extent that collective interpretations are drawn should be sensitive to contextual factors.
+%While this reasoning is enough to motivate our experiments, some confusion could remain about the exact nature and role of factors such as predictability. 
+In section \ref{model} we formalized our hypothesis with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability. 
 
 %Having both demonstrated and quantified the role of contextual predictability and speaker knowledge in plural predication, we then formalized the role of each factor in a computational model of communication. Our model, conceived within the Rational Speech-Act framework, employed a standard semantics to achieve not only accurate qualitative, but accurate quantitative predictions of our human data. Speaker knowledge affected collective interpretations by removing epistemic support and thereby decreasing a speaker's utility for distributive interpretations. Contextual predictability had a similar effect: noisier collective interpretations are less effective at correctly communicating about the world; being less useful, they are less likely.
 
 
 \ndg{i'd prefer to have the info in the net three paragraphs organized by effect, rather than expt: status of classes according to stubbornness, effect of predictability, effect of speaker knowledge.}
 
-We found evidence for this information-theoretic explanation over the course of three experiments. First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of Expt.~1 also begin to demonstrate the role of speaker access to knowledge, something both speakers and listeners track as they communicate with each other. In a scenario where speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely.
+We found evidence for this pragmatic explanation over the course of three experiments. First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of Expt.~1 also begin to demonstrate the role of speaker access to knowledge, something both speakers and listeners track as they communicate with each other. In a scenario where speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely.
 
 In Expt.~2, we applied our paraphrase endorsement method to naturally-occurring examples in the absence of specific referents. Once again, we saw that interpretations are likely to the extent that a speaker plausibly holds the knowledge to verify them. We also began to find evidence of the role of contextual predictability in collective interpretations: for stubbornly distributive \emph{big} and \emph{small}, collective endorsement ratings increased for nominal subjects with a relatively predictable arrangement or evaluation strategy for collective size.
 
@@ -883,6 +886,8 @@ In Expt.~3, we further pursued the speaker knowledge effect while testing more d
 In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
 
 \subsection{Implications for semantic theories of plural predication}
+
+\ndg{this subsection is fine, though maybe a bit wordy.}
 
 Plural predication is heavily dependent on the context in which that predication occurs. Taking as our starting point the null hypothesis that all such predications are potentially ambiguous between collective and distributive interpretations, we saw that speakers and listeners track properties of the context (and of each other) as they endeavor to resolve this ambiguity. By considering plural predication within an articulated formal theory of communication (i.e., the Rational Speech-Act framework), we have identified and isolated two elements of this calculus: a) the speaker's access to knowledge; and b) noise in the estimation of properties, or contextual predictability. For present purposes, it is this latter element, contextual predictability, that features most prominently in our explanation of stubborn distributivity.
 
@@ -895,12 +900,17 @@ Further evidence for the non-trivial role of contextual predictability in collec
 The same mechanism we saw at play in the context manipulation of Expt.~3 rears its head here: contextual predictability of the collective property determines availability of collective interpretations.
 
 Note that subject nouns already played a crucial role in the disambiguation of plural predications. \cite{schwarzschild2011} observed that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. He observed a similar, though opposite effect for mass nouns, which lack any information about physical arrangement. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (e.g., \emph{the pile of boxes} names a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these collectivizing nouns seem to unlock the collective interpretation. Just as our contextual manipulation in Expt.~3 increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the information-theoretic mechanism remains the same.
+\ndg{shouldn't pile have unpredictable arrangement??}
+
+\ndg{do we need to more directly address david beaver and chris kennedy's question about whether the action is in the predicate or the noun? my take is that it could be either -- our model and results are at the level of the whole phrase, leaving open where in the compositional / lexical semantics the ambiguity is actually located.}
 
 To understand this mechanism, namely how contextual predictability affects the calculus of interpretation choice, we modeled its contribution explicitly within a computational model of plural predication. The success of this model adds to the growing body of support for the central role of rational inference in communication; we turn next to its details.
 
 \subsection{Implications for formal models of pragmatics}
 
-Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. By considering utterance semantics within this articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (i.e., collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
+\ndg{this section is too long. discussion should be for discussing additional points and issues, not for recapitulating the earlier points (except in service of discussing). so.. cut a lot of the review and explanation of the model from this section, and focus on the actual implications for formal pragmatics: ambiguity resolution in terms of lifted-variable models; the role of noise that comes from uncertainty about context, especially when the noise differentially affects alternate meanings; epistemic manipulations as a test of whether a missing reading is grammatically prohibited or only pragmatically dispreferred; etc?}
+
+Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. By considering utterance semantics within this articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (e.g.~collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
 
 Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive not just qualitative, but quantitative predictions. Formulated within the Rational Speech-Act framework, our model leveraged Bayesian inference, together with minimal assumptions about utterance semantics and cost, to match near-perfectly participants' behavior in our experimental paradigm. The model's success and structure serve to support the intuitions that motivated it: increasing the contextual predictability of collective properties increases the probability of an ambiguous plural predication receiving a collective interpretation. Given its discrete, isolable components, we can identify the contribution of this effect at each level of inference. 
 
@@ -917,7 +927,7 @@ With both contextual predictability and speaker knowledge, our modeling approach
 
 \section{Conclusion}
 
-We have seen that the phenomenon of stubborn distributivity, whereby certain gradable predicates resist collective interpretations, arises from an interaction between the rational reasoning processes of language users and qualities of the collective properties they name. Speakers and listeners require more coordination to align their beliefs about properties that are less predictable across contexts (e.g., collective size or shape, which might change as arrangements change). As a result, they require more support from context to accurately discuss these potentially variable, uncertain properties. This support might come in the form of words that increase contextual predictability (e.g., \emph{pile}, which regularizes otherwise variable physical arrangements) or from increasing the regularity of the context itself (e.g., by ensuring that sets realize a common physical arrangement). As collective properties become more predictable, collective interpretations become more informative, more useful, and therefore more likely.
+We have argued that understanding plural predication, and notably the phenomenon of stubborn distributivity, arises from an interaction between the rational reasoning processes of language users and qualities of the collective properties they name. Speakers and listeners require more coordination to align their beliefs about properties that are less predictable across contexts (e.g., collective size or shape, which might change as arrangements change). As a result, they require more support from context to accurately discuss these potentially variable, uncertain properties. This support might come in the form of words that increase contextual predictability (e.g., \emph{stack}, which regularizes otherwise variable physical arrangements) or from increasing the regularity of the context itself (e.g., by ensuring that sets realize a common physical arrangement). As collective properties become more predictable, collective interpretations become more informative, more useful, and therefore more likely.
 
 
 \appendix
