more edits to model section

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -673,18 +673,18 @@ Taken together, our results demonstrate the central role of context in plural pr
 \section{Modeling plural predication}
 \label{model}
 
-\ndg{this section should be much shorter -- probably about three pages. 
-%
-first describe the basic model structure briefly, giving some intuition and pointing out where we draw on previous modeling work.
-%
-start with the literal semantics: $\sem{u}^{v,c}(s)$, which is a truth function that depends on both context, $c$, and utterance interpretation, $v$. specifically we assume that depending on $v$ the plural predication is either universal of property or c X sum of property. here context c is a simple scalar multiplier, a simple approximation for all the ways context could affect the collective property.
-%
-now the literal listener has prior uncertainty about context $P(c)$ and state $P(s)$ and otherwise just updates beliefs by conditioning on the meaning. we could have the literal listener reason also about the word-sense, $v$, but we choose instead to \emph{lift} it, so that pragmatic forces will affect it. (should we implement and compare to the unlifted model?)
-%
-then the speaker, whose utility is expected informativity. (do we need cost in this model?)
-then the pragmatic listener, who reasons about word-sense as well as world (and context).
-%
-then have a briefer section on the setup we use for the boxes scenario, and how we choose parameters.}
+%\ndg{this section should be much shorter -- probably about three pages. 
+%%
+%first describe the basic model structure briefly, giving some intuition and pointing out where we draw on previous modeling work.
+%%
+%start with the literal semantics: $\sem{u}^{v,c}(s)$, which is a truth function that depends on both context, $c$, and utterance interpretation, $v$. specifically we assume that depending on $v$ the plural predication is either universal of property or c X sum of property. here context c is a simple scalar multiplier, a simple approximation for all the ways context could affect the collective property.
+%%
+%now the literal listener has prior uncertainty about context $P(c)$ and state $P(s)$ and otherwise just updates beliefs by conditioning on the meaning. we could have the literal listener reason also about the word-sense, $v$, but we choose instead to \emph{lift} it, so that pragmatic forces will affect it. (should we implement and compare to the unlifted model?)
+%%
+%then the speaker, whose utility is expected informativity. (do we need cost in this model?)
+%then the pragmatic listener, who reasons about word-sense as well as world (and context).
+%%
+%then have a briefer section on the setup we use for the boxes scenario, and how we choose parameters.}
 
 To successfully model contextual predictability and speaker knowledge in ambiguity resolution---and thereby precisely specify their contributions---we adopt a variant of the Rational Speech-Acts (RSA) approach \citep{frankgoodman2012,goodmanstuhlmuller2013}. Within the RSA framework, language understanding is modeled as a recursive reasoning process: the listener interprets the speaker's utterance by reasoning about a cooperative speaker trying to inform a naive listener about some state of affairs. Using Bayesian inference, the listener determines what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the sophisticated, pragmatic listener, \emph{L}$_{1}$, reasons about the pragmatic speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the probability that a naive, literal listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
 
@@ -821,18 +821,19 @@ In other words, listeners reason about likely interpretations of ambiguous plura
 \subsection{Model specifics}
 
 To generate qualitative and quantitative predictions that we may compare with our experimental results, we need to fix various parameter settings within the model. %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
-States $s$ correspond to ordered sets of four objects, which hold scalar properties. States are formed by drawing four times from a uniform prior distribution over objects (i.e., boxes of size 3 or 4). States are thus sets of positive integers, for example $\{3, 3, 4, 4\}$ or $\{3, 4, 4, 4\}$; the state $\{3, 3, 4, 4\}$ corresponds to a plurality of four boxes, two of size 3 and two of size 4. 
+States $s$ correspond to ordered sets of four objects, which hold scalar properties. States are formed by drawing four times from a uniform prior distribution over objects (i.e., boxes of size 3 or 4). States are thus sets of positive integers; the state $\{3, 3, 4, 4\}$ corresponds to a plurality of four boxes, two of size 3 and two of size 4. 
  
-Next, the utterances. Speakers choose between an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}). The ambiguous utterance is always at least as cheap (in terms of the cost to the speaker) as the unambiguous utterances. The interpretation of the ambiguous utterance depends on the value of the interpretation-resolving variable $v$, which the pragmatic listener infers. When $v$ is \textsc{collective}, the utterance receives a collective interpretation; otherwise, the utterance receives a distributive interpretation. %These interpretations carry the semantics in \Next.
+Next, the utterances. Speakers choose between an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}). The ambiguous utterance is always at least as cheap (in terms of the cost to the speaker) as the unambiguous utterances. The interpretation of the ambiguous utterance depends on the value of the interpretation-resolving variable $v$, which the pragmatic listener infers. When $v$ is \textsc{collective}, the utterance receives a \texttt{collective-interpretation}, \ref{coll}; otherwise, the utterance receives a \texttt{distributive-interpretation}, \ref{dist}.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaking, $v$ represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} %These interpretations carry the semantics in \Next.
 % 
 % \ex. \emph{Interpretation semantics}:
 % \a. \sem{\texttt{distributive-interpretation}} =
 %\begin{flushright}\lam $s$. $\forall$x$\in$$s$[x $>$ \texttt{distributive-threshold}]\end{flushright}
 %\b. \sem{\texttt{collective-interpretation}} = 
 %\begin{flushright}\lam $s$. (\texttt{sum}($s$) $\times$ \textcolor{red}{\texttt{noise}}) $>$ \texttt{collective-threshold}\end{flushright}
-The \texttt{distributive-interpretation}, \ref{dist}, is true of a state $s$ just in case each of its members exceeds some distributive threshold.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaking, $v$ represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state---the plurality taken together---exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. So far, no deviation from the formal semantics tradition.
+%In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state---the plurality taken together---exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. 
+So far, no deviation from the formal semantics tradition.
 
-What sets this semantics apart from the tradition that informs it is the context parameter $c$ in the \texttt{collective-interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
+What sets this semantics apart is the contextual noise parameter $c$ in the \texttt{collective-interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
 %This parameter explicitly represents possible noise in the determination of, say, collective size. In other words, this parameter models the contextual predictability of a collective property, or the possibility that speakers and listeners will arrive at different truth values for a collective interpretation. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. 
 To evaluate the qualitative predictions of our model, we begin with the possible values for $c$ shown in Fig.~\ref{noises}, where, for example, with \texttt{low} noise $c$ equals 1 (i.e., no change to the state estimate) 100\% of the time; and with \texttt{high} noise, $c$ equals 0.5, 1, or 1.5 with equal probability (i.e., the state estimate is accurate a third of the time, or off by half two-thirds of the time).
 
@@ -840,7 +841,7 @@ To evaluate the qualitative predictions of our model, we begin with the possible
 	\centering
 	\includegraphics[width=\linewidth]{plots/noise_plots.eps}
 	\vspace{-20pt}
-	\caption{\textcolor{red}{\texttt{noise}} priors used to evaluate the qualitative predictions of the plural predication model.} \label{noises}
+	\caption{contextual noise priors used to evaluate the qualitative predictions of the plural predication model.} \label{noises}
 \end{figure}
 
 %With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise is a property of the world context, and as such speakers and listeners both have access to its value. In other words, we assume that speakers and listeners are aware of the inherent contextual predictability of collective properties.
@@ -868,11 +869,12 @@ The qualitative predictions of our plural predication model match the intuitions
 
 Another outcome of our model's predictions is the increase in the probability of a collective interpretation as the speaker's knowledge access becomes limited. With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks perceptual/epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
-We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
+%We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
 
 Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we fit that parameter to 0.88 for each of the three predicates.
 
-To evaluate the role of speaker knowledge, we look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). Here we fit only the specific values for noise in the model; all other parameters remain unchanged. With \emph{heavy}-specific values for ``random'' and ``regular'' noise, we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. Perhaps surprisingly, by simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
+To quantitatively evaluate the role of speaker knowledge, we look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
+With \emph{heavy}-specific values for ``random'' and ``regular'' contextual noise (all other parameters remain unchanged), we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. Perhaps surprisingly, by simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
 
 \begin{figure}[h]
 	\centering
@@ -881,7 +883,7 @@ To evaluate the role of speaker knowledge, we look only at judgments for plural 
 	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{heavy}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise in the collective interpretation, and the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``partial'').} \label{heavymodel}
 \end{figure}
 
-Next, for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, we fit predicate-specific values for collective interpretation noise. Also, we cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive} (a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word). With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{bigtallmodel}; once again, the fit is near perfect.
+To qualitatively evaluate the role of contextual predictability for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, increase the prior probability of collective interpretations and we fit predicate-specific values for contextual noise. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive} (a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word). With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{bigtallmodel}; once again, the fit is near perfect.
 
 \begin{figure}[h]
 	\centering
@@ -890,7 +892,7 @@ Next, for \emph{big} and \emph{tall}, we again have the model predict collective
 	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of collective interpretation.} \label{bigtallmodel}
 \end{figure}
 
-In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, we have shown that fitting predicate-specific parameters for contextual noise and utterance cost yields near exact quantitative predictions of human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
+In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise and utterance cost yields near exact quantitative predictions of the observed human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
 
 
 \section{General discussion}
