--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -384,7 +384,7 @@ To evaluate the behavior of the predicates in the absence of the disambiguating 
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{plots/expt1bootsci2.eps}
+	\includegraphics[width=\linewidth]{plots/expt1bootsci.eps}
 	\vspace{-15pt}
 	\caption{Proportion of collective choices in the results of Expt.~1.}\label{results2}
 \end{figure}
@@ -450,7 +450,7 @@ We begin with a look at the range of collective endorsement ratings.\footnote{A 
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=.985\linewidth]{plots/sentence_plot2.eps}
+	\includegraphics[width=.985\linewidth]{plots/sentence_plot.eps}
 	%\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different noun-predicate combinations in Expt.~2a (i.e., for different sentences).} \label{sentence-coll}
 \end{figure}
@@ -469,7 +469,7 @@ Here we rely on the accidental occurrence of multiple subject nouns in our small
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=.85\linewidth]{plots/noun_pred_plot2.eps}
+	\includegraphics[width=.85\linewidth]{plots/noun_pred_plot.eps}
 	%\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different subject nouns grouped by predicate (Expt.~2a).} \label{noun-pred-coll}
 \end{figure}
@@ -522,7 +522,7 @@ To compare the predicates with each other, we fit a linear mixed effects model p
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=.85\linewidth]{plots/bht_plot2.eps}
+	\includegraphics[width=.85\linewidth]{plots/bht_plot.eps}
 	\vspace{0pt}
 	\caption{Collective paraphrase endorsement rates for different nouns serving as the subject to the predicates \emph{big}, \emph{heavy}, and \emph{tall} (Expt.~2b).} \label{bhtcoll}
 \end{figure}
@@ -639,7 +639,7 @@ First note the qualitative effects of our two manipulations: collective interpre
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=\linewidth]{plots/expt2rawbootsci2.eps} 
+	\includegraphics[width=\linewidth]{plots/expt3.eps} 
 	\vspace{-15pt}
 	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~3.}\label{resultsexpt2}
 \end{figure}
@@ -860,7 +860,7 @@ Given our interest in the effects of contextual predictability and speaker knowl
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{plots/model-results2.eps}
+	\includegraphics[width=\linewidth]{plots/model-results.eps}
 	\vspace{-20pt}
 	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.} \label{modelresults}
 \end{figure}
@@ -871,25 +871,25 @@ Another outcome of our model's predictions is the increase in the probability of
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
 
-Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we fit that parameter to 0.88 for each of the three predicates.
+Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we fit that parameter to 0.88 for each of the three predicates. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive} (a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word).
 
-To quantitatively evaluate the role of speaker knowledge, we look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
-With \emph{heavy}-specific values for ``random'' and ``regular'' contextual noise (all other parameters remain unchanged), we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. Perhaps surprisingly, by simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
+To quantitatively evaluate the role of speaker knowledge, we collapse over the contextual predictability manipulation and look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
+With \emph{heavy}-specific values for contextual noise (all other parameters remain unchanged), we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. Perhaps surprisingly, by simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{plots/heavymodel2.eps}
-	\vspace{-20pt}
-	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{heavy}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise in the collective interpretation, and the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``partial'').} \label{heavymodel}
+	\includegraphics[width=.72\linewidth]{plots/heavymodel.eps}
+	%\vspace{-20pt}
+	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{heavy}; the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``partial'').} \label{heavymodel}
 \end{figure}
 
-To qualitatively evaluate the role of contextual predictability for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, increase the prior probability of collective interpretations and we fit predicate-specific values for contextual noise. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive} (a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word). With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{bigtallmodel}; once again, the fit is near perfect.
+To qualitatively evaluate the role of contextual predictability for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, we fit predicate-specific values for contextual noise.  With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{bigtallmodel}; once again, the fit is near perfect.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{plots/bigtallmodel2.eps}
+	\includegraphics[width=\linewidth]{plots/bigtallmodel.eps}
 	\vspace{-20pt}
-	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of collective interpretation.} \label{bigtallmodel}
+	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by contextual noise in the evaluation of the collective interpretation.} \label{bigtallmodel}
 \end{figure}
 
 In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise and utterance cost yields near exact quantitative predictions of the observed human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
