--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -639,8 +639,8 @@ First note the qualitative effects of our two manipulations: collective interpre
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=\linewidth]{plots/expt3.eps} 
-	\vspace{-15pt}
+	\includegraphics[width=.9\linewidth]{plots/expt3.eps} 
+	%\vspace{-15pt}
 	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~3.}\label{resultsexpt2}
 \end{figure}
 
@@ -818,12 +818,12 @@ In other words, listeners reason about likely interpretations of ambiguous plura
 %
 % To summarize: the pragmatic listener resolves ambiguity while interpreting an utterance by reasoning about the pragmatic speaker, who chooses utterances most likely to communicate some state via a specific interpretation to a naive, literal listener. The speaker and pragmatic listener track the speaker's access to knowledge, which determines whether the speaker has limited access to the state about which he communicates. In other words, listeners reason about likely interpretations of ambiguous plural predications given their intuitive understanding of speakers and their prior knowledge of the world (i.e., which states and interpretations are \emph{a priori} likely).
 
-\subsection{Model specifics}
+\subsection{Qualitative predictions}
 
-To generate qualitative and quantitative predictions that we may compare with our experimental results, we need to fix various parameter settings within the model. %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
+To generate qualitative predictions that we may compare with our experimental results, we need to fix various parameter settings within the model. %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
 States $s$ correspond to ordered sets of four objects, which hold scalar properties. States are formed by drawing four times from a uniform prior distribution over objects (i.e., boxes of size 3 or 4). States are thus sets of positive integers; the state $\{3, 3, 4, 4\}$ corresponds to a plurality of four boxes, two of size 3 and two of size 4. 
  
-Next, the utterances. Speakers choose between an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}). The ambiguous utterance is always at least as cheap (in terms of the cost to the speaker) as the unambiguous utterances. The interpretation of the ambiguous utterance depends on the value of the interpretation-resolving variable $v$, which the pragmatic listener infers. When $v$ is \textsc{collective}, the utterance receives a \texttt{collective-interpretation}, \ref{coll}; otherwise, the utterance receives a \texttt{distributive-interpretation}, \ref{dist}.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaking, $v$ represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} %These interpretations carry the semantics in \Next.
+Next, the utterances. Speakers choose between an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}). The interpretation of the ambiguous utterance depends on the value of the interpretation-resolving variable $v$, which the pragmatic listener infers. When $v$ is \textsc{collective}, the utterance receives a \texttt{collective-interpretation}, \ref{coll}; otherwise, the utterance receives a \texttt{distributive-interpretation}, \ref{dist}.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaking, $v$ represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} %These interpretations carry the semantics in \Next.
 % 
 % \ex. \emph{Interpretation semantics}:
 % \a. \sem{\texttt{distributive-interpretation}} =
@@ -831,7 +831,7 @@ Next, the utterances. Speakers choose between an {unambiguously distributive} (e
 %\b. \sem{\texttt{collective-interpretation}} = 
 %\begin{flushright}\lam $s$. (\texttt{sum}($s$) $\times$ \textcolor{red}{\texttt{noise}}) $>$ \texttt{collective-threshold}\end{flushright}
 %In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state---the plurality taken together---exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. 
-So far, no deviation from the formal semantics tradition.
+%So far, no deviation from the formal semantics tradition.
 
 What sets this semantics apart is the contextual noise parameter $c$ in the \texttt{collective-interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
 %This parameter explicitly represents possible noise in the determination of, say, collective size. In other words, this parameter models the contextual predictability of a collective property, or the possibility that speakers and listeners will arrive at different truth values for a collective interpretation. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. 
@@ -841,22 +841,25 @@ To evaluate the qualitative predictions of our model, we begin with the possible
 	\centering
 	\includegraphics[width=\linewidth]{plots/noise_plots.eps}
 	\vspace{-20pt}
-	\caption{contextual noise priors used to evaluate the qualitative predictions of the plural predication model.} \label{noises}
+	\caption{Contextual noise priors used to evaluate the qualitative predictions of the plural predication model.} \label{noises}
 \end{figure}
 
 %With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise is a property of the world context, and as such speakers and listeners both have access to its value. In other words, we assume that speakers and listeners are aware of the inherent contextual predictability of collective properties.
 
-Lastly, to model speaker access to knowledge, when $a$ is set to \texttt{full} knowledge, the speaker's belief distribution over possible states is exact, a delta distribution over \emph{the} state (Fig.~\ref{speakerbelief}, left). Having observed $\{3,3,4,4\}$, the speaker knows the state is $\{3,3,4,4\}$ (and not, say, $\{4,4,3,3\}$). Where $a$ is set to \texttt{partial} knowledge, the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, right). With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 14. But more than one state could generate this value, namely any combination of two size 3 boxes with two size 4 boxes.\footnote{In its simplest form, our model includes only objects of two different sizes (3 and 4), so that speaker uncertainty over states concerns the order of the state-internal objects. Including more possible objects (i.e., more possible object sizes) introduces additional uncertainty over the identity of state-internal objects. We present the simpler model here for illustrative purposes only. As mentioned in fn.~\ref{parameter} above, all of the model predictions we report are robust to a broad range of parameter settings, including a prior over individual objects that includes more than two possible values. In fact, including more possible objects serves merely to increase potential speaker uncertainty and thus enhance the effect of speaker knowledge.}
+When the speaker access to knowledge variable $a$ is set to \texttt{full}, the speaker's belief distribution over possible states is exact, a delta distribution over \emph{the} state (Fig.~\ref{speakerbelief}, left); having observed $\{3,3,4,4\}$, the speaker knows the state is $\{3,3,4,4\}$ (and not, say, $\{4,4,3,3\}$). %Where $a$ is set to \texttt{partial} knowledge, the . 
+With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 14, so the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, right).%But more than one state could generate this value, namely any combination of two size 3 boxes with two size 4 boxes.
+\footnote{In its simplest form, our model includes only objects of two different sizes (3 and 4), so that speaker uncertainty over states concerns the order of the state-internal objects. 
+%Including more possible objects (i.e., more possible object sizes) introduces additional uncertainty over the identity of state-internal objects. 
+We present the simpler model here for illustrative purposes only. All of the model predictions we report are robust to a broad range of parameter settings, including a prior over individual objects that includes more than two possible values. In fact, including more types possible objects serves merely to increase potential speaker uncertainty and thus enhance the effect of speaker knowledge.}
 
 \begin{figure}[h]
 	\includegraphics[width=\linewidth]{plots/state_plots.eps}
 	\vspace{-20pt}
 	\caption{Speaker belief distributions resulting from \texttt{full} (left) and \texttt{partial} (right) perceptual access to the state $\{3,3,4,4\}$.} \label{speakerbelief}
 \end{figure}
+%\subsection{Model predictions}
 
-\subsection{Model predictions}
-
-Given our interest in the effects of contextual predictability and speaker knowledge on the interpretation of potentially ambiguous plural predications, in Fig.~\ref{modelresults}, we plot the probability that the interpretation-resolving variable $v$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance. In other words, we plot the probability of a collective interpretation as a function of noise in the collective interpretation and speaker access to knowledge.
+Given our interest in the effects of contextual predictability and speaker knowledge on the disambiguation of plural predications, in Fig.~\ref{modelresults}, we plot the probability that the interpretation-resolving variable $v$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance. In other words, we plot the probability of a collective interpretation.% as a function of noise in the collective interpretation and speaker access to knowledge.
 
 \begin{figure}[h]
 	\centering
@@ -865,16 +868,19 @@ Given our interest in the effects of contextual predictability and speaker knowl
 	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.} \label{modelresults}
 \end{figure}
 
-The qualitative predictions of our plural predication model match the intuitions and experimental results that motivated the model. Most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. That is to say, as contextual noise decreases, collective properties become more predictable, and collective interpretations become more likely. We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
+The qualitative predictions of our plural predication model match the intuitions and experimental results that motivated the model. Most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. As contextual noise decreases, collective properties become more predictable, and collective interpretations become more likely. We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
 
-Another outcome of our model's predictions is the increase in the probability of a collective interpretation as the speaker's knowledge access becomes limited. With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks perceptual/epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
+The model also successfully predicts the qualitative increase in the probability of a collective interpretation as the speaker's knowledge access becomes limited.%With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
+$L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks perceptual/epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
 
-Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we fit that parameter to 0.88 for each of the three predicates. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive} (a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word).
+\subsection{Quantitative predictions}
+
+To test the quantitative predictions of our model, we fit its parameters to best estimate the human data. Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~3 in Fig.~\ref{resultsexpt2}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(v)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~3, we set that parameter to 0.88 for each of the three predicates. We also cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the utterance prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive}---a reasonable assumption from the point of view of production, given that costlier, unambiguous utterances contain an extra word (e.g., \emph{each} or \emph{together}).
 
 To quantitatively evaluate the role of speaker knowledge, we collapse over the contextual predictability manipulation and look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
-With \emph{heavy}-specific values for contextual noise (all other parameters remain unchanged), we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. Perhaps surprisingly, by simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
+With \emph{heavy}-specific values for contextual noise---all other parameters remain unchanged---we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. By simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
 
 \begin{figure}[h]
 	\centering
@@ -892,7 +898,7 @@ To qualitatively evaluate the role of contextual predictability for \emph{big} a
 	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by contextual noise in the evaluation of the collective interpretation.} \label{bigtallmodel}
 \end{figure}
 
-In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise and utterance cost yields near exact quantitative predictions of the observed human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
+In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact quantitative predictions of the observed human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
 
 
 \section{General discussion}
