added link to Forest model

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -853,7 +853,7 @@ When the speaker access to knowledge variable $a$ is set to \texttt{full}, the s
 With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 14, so the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, right).%But more than one state could generate this value, namely any combination of two size 3 boxes with two size 4 boxes.
 \footnote{In its simplest form, our model includes only objects of two different sizes (3 and 4), so that speaker uncertainty over states concerns the order of the state-internal objects. 
 %Including more possible objects (i.e., more possible object sizes) introduces additional uncertainty over the identity of state-internal objects. 
-We present the simpler model here for illustrative purposes only. All of the model predictions we report are robust to a broad range of parameter settings, including a prior over individual objects that includes more than two possible values. In fact, including more types possible objects serves merely to increase potential speaker uncertainty and thus enhance the effect of speaker knowledge. The full model is viewable online at XXX.}
+We present the simpler model here for illustrative purposes only. All of the model predictions we report are robust to a broad range of parameter settings, including a prior over individual objects that includes more than two possible values. In fact, including more types possible objects serves merely to increase potential speaker uncertainty and thus enhance the effect of speaker knowledge. The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.}
 
 \begin{figure}[h]
 	\includegraphics[width=\linewidth]{plots/state_plots.eps}
